dropdown blurring issues

--- a/src/components/TableComponent/table.css
+++ b/src/components/TableComponent/table.css
@@ -31,5 +31,11 @@
 
 .rdt_TableCol_Sortable:hover {
     cursor: pointer !important;
+    opacity: 2 !important;
+}
+
+
+.fFBlx:hover, .fFBlx:focus, .fFBlx:focus span, .fFBlx:hover span.__rdt_custom_sort_icon__ *, .fFBlx:focus span.__rdt_custom_sort_icon__ {
     opacity: 1 !important;
+    color: black !important;
 }
